--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- Updated viewport to prevent manual zoom and ensure auto-zoom on mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Flappy Bird Clone</title>
+    <title>Flappy Bird</title>
     <style>
         * {
             margin: 0;
@@ -574,3 +574,4 @@
     </script>
 </body>
 </html>
+
